--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "to-lib": "vue-cli-service build --target lib --name big-data-transfer ./src/components/Transfer.vue",
+    "to-wc": "vue-cli-service build --target wc --name big-data-transfer ./src/components/Transfer.vue"
   },
   "dependencies": {
+    "ant-design-vue": "^1.7.8",
+    "big-data-transfer": "^1.0.1",
+    "big-data-transfer1": "file:big-data-transfer",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
